--- a/Thermory.Web/Views/SalesOrder/Index.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Index.cshtml
@@ -3,19 +3,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<nav>
-    <ul>
-        <li>@Html.ActionLink("Create Purchase Order", "CreatePurchaseOrder", "Order")</li>
-        <li>@Html.ActionLink("Create Sales Order", "CreateSalesOrder", "Order")</li>
-    </ul>
-</nav>
+<div>@Html.ActionLink("Create Sales Order", "Create", "SalesOrder")</div>
+<h3><strong>Sales Orders</strong></h3>
 <div id="orderDiv" style="height: 450px"></div>
 
 <script>
     $(document).ready(function () {
         $('#orderDiv').w2grid({
             name: 'orderGrid',
-            url: '@Url.RouteUrl("DefaultApi", new { httproute = "", controller = "OrderGrid" })',
+            url: '@Url.RouteUrl("DefaultApi", new { httproute = "", controller = "SalesOrderGrid" })',
             autoLoad: true,
             limit: 500,
             msgRefresh: 'Loading',
@@ -28,7 +24,6 @@
             },
             searches: [
                 { field: 'OrderNumber', caption: 'Order Number', type: 'text' },
-                { field: 'OrderType', caption: 'Order Type', type: 'list', options: { items: ['Sales Order', 'Purchase Order'] } },
                 { field: 'CustomerName', caption: 'Customer', type: 'text' },
                 { field: 'CreatedOn', caption: 'Created On', type: 'date' },
                 { field: 'CreatedBy', caption: 'Created By', type: 'text' },
@@ -36,13 +31,10 @@
             ],
             columns: [
                 {
-                    field: 'OrderNumberString', caption: 'Order Number', size: '10%', sortable: true, resizable: true, render: 'text'
+                    field: 'OrderNumberString', caption: 'Order Number', size: '20%', sortable: true, resizable: true, render: 'text'
                 },
                 {
-                    field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, render: 'text'
-                },
-                {
-                    field: 'CustomerName', caption: 'Customer', size: '20%', sortable: true, resizable: true, render: 'text'
+                    field: 'CustomerName', caption: 'Customer', size: '30%', sortable: true, resizable: true, render: 'text'
                 },
                 {
                     field: 'CreatedOn', caption: 'Created On', size: '20%', sortable: true, resizable: true, render: 'date'
@@ -58,7 +50,7 @@
                 { field: 'CreatedOn', direction: 'desc' }
             ],
             onSelect: function (event) {
-                window.location = ('@Url.Action("Review", "Order")/' + event.recid);
+                window.location = ('@Url.Action("Review", "SalesOrder")/' + event.recid);
             }
         });
     });
