Changed quanity to pieces on order review.

--- a/Thermory.Web/Views/Shared/Order/_LumberProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberProductReview.cshtml
@@ -21,7 +21,7 @@
                         <tr>
                             <th>Length</th>
                             <th>Width</th>
-                            <th>Quantity</th>
+                            <th>Pieces</th>
                             <th>Linear Feet</th>
                             <th>Square Feet</th>
                         </tr>
