--- a/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
@@ -8,7 +8,7 @@
             <th>Sub Category</th>
             <th>Type</th>
             <th>Length</th>
-            <th>Delta</th>
+            <th>Change</th>
         </tr>
     </thead>
 
