--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousTransactionDetails.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousTransactionDetails.cshtml
@@ -7,7 +7,7 @@
             <th>Category</th>
             <th>Sub Category</th>
             <th>Name</th>
-            <th>Delta</th>
+            <th>Change</th>
         </tr>
     </thead>
 
