--- a/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
@@ -24,7 +24,7 @@
             <td>@detail.LumberProduct.LumberType.LumberSubCategory.LumberCategory.Name</td>
             <td>@detail.LumberProduct.LumberType.LumberSubCategory.Name</td>
             <td>@detail.LumberProduct.LumberType.Name</td>
-            <td>@detail.LumberProduct.LengthInInches"</td>
+            <td>@detail.LumberProduct.LengthInFeet FT</td>
             <td>@deltaPrefix@delta</td>
         </tr>
     }
