--- a/Thermory.Web/Content/w2ui-1.4.3.css
+++ b/Thermory.Web/Content/w2ui-1.4.3.css
@@ -1674,7 +1674,7 @@ button.btn-red.clicked {
 .w2ui-grid .w2ui-grid-body table td {
   border-right: 1px solid #d6d5d7;
   border-bottom: 0px solid #d6d5d7;
-  cursor: default;
+  cursor: pointer;
   overflow: hidden;
 }
 .w2ui-grid .w2ui-grid-body table td.w2ui-grid-data {
