--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -15,6 +15,19 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
+        <h5>4/17/2016</h5>
+        <ul>
+            <li>Added users grid.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>4/10/2016</h5>
+        <ul>
+            <li>Broke up purchase orders and sales orders into separate pages.</li>
+            <li>Added packaging type to orders.</li>
+        </ul>
+    </li>
+    <li>
         <h5>4/3/2016</h5>
         <ul>
             <li>Added transaction history to order review.</li>
