Refactored user grid to use role names string list instead of single string field to load the roles into the edit control.

--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -120,6 +120,8 @@ footer {
     background-color: #e2e2e2;
     font-size: .8em;
     height: 20px;
+    border-top: solid 1px darkgray;
+    padding: 5px 0 5px 0;
 }
 
 
