--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -86,6 +86,8 @@
         for (var i = 0; i < selected.length; ++i) {
             currentUser.RoleNames.push(selected[i].id);
         }
+        console.log(currentUser);
+        console.log(currentUser.RoleNames);
 
         $.ajax({
             type: 'PUT',
@@ -93,7 +95,7 @@
             data: currentUser,
             dataType: 'text',
             success: function (data) {
-                if (data != 'true') {
+                if (data.toLowerCase() != 'true') {
                     w2alert(data, 'Error');
                 }
 
