--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -4,11 +4,11 @@
 }
 
 <h3><strong>Users</strong></h3>
-<div id="userDiv" style="height: 450px"></div>
-<div id="userDetails" style="width: 400px; display: none; padding-top: 10px;">
+<div id="userGrid" style="height: 450px"></div>
+<div id="userDetails" style="display: none; padding-top: 10px;">
     <div class="row" style="margin-top: 5px">
         <div class="col-sm-4" style="text-align: right">
-            <label>User Name:</label>
+            <label>Email Address:</label>
         </div>
         <div class="col-sm-5">
             <span id="emailAddress"></span>
@@ -22,9 +22,12 @@
             <input id="roles" />
         </div>
     </div>
-    <div style="margin-left: 85px; padding-top: 10px">
-        <div class="btn btn-default" onclick="saveUser();">Save</div>&nbsp;
-        <div class="btn btn-default" onclick="$('#userDetails').hide();">Cancel</div>
+    <div class="row" style="margin-top: 5px">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-8">
+            <div class="btn btn-default" onclick="saveUser();">Save</div>&nbsp;
+            <div class="btn btn-default" onclick="$('#userDetails').hide();">Cancel</div>
+        </div>
     </div>
 </div>
 
@@ -33,7 +36,7 @@
     var currentUser = null;
 
     $(document).ready(function () {
-        $('#userDiv').w2grid({
+        $('#userGrid').w2grid({
             name: 'userGrid',
             url: '@Url.RouteUrl("DefaultApi", new { httproute = "", controller = "UserGrid" })',
             autoLoad: true,
@@ -66,28 +69,20 @@
             ],
             onClick: function (event) {
                 currentUser = w2ui['userGrid'].get(event.recid);
-                console.log(currentUser.RoleNames);
+                $('#emailAddress').text(currentUser.UserName);
                 $('#userDetails').show();
-                $('#emailAddress').text(currentUser.EmailAddress);
                 $('#roles').w2field('enum', { items: roles, openOnFocus: true, selected: currentUser.RoleNames });
             }
         });
     });
 
     function saveUser() {
-        // Create the user object if it's new
-        if (currentUser == null) {
-            currentUser = { EmailAddress: $('#emailAddress').val() };
-        }
-
         var selected = $('#roles').data('selected');
         currentUser.RoleNames = [];
 
         for (var i = 0; i < selected.length; ++i) {
             currentUser.RoleNames.push(selected[i].id);
         }
-        console.log(currentUser);
-        console.log(currentUser.RoleNames);
 
         $.ajax({
             type: 'PUT',
