--- a/Thermory.Web/Views/Catalog/Index.cshtml
+++ b/Thermory.Web/Views/Catalog/Index.cshtml
@@ -24,20 +24,19 @@
         }
     </ul>
 </div>
-<h2>@Model.SelectedCategoryName</h2>
 @{
     if (Model.LumberCategories.Any(c => c.Id == Model.SelectedCategoryId))
     {
         var category = Model.LumberCategories.SingleOrDefault(c => c.Id == Model.SelectedCategoryId);
         <div id="@category.Id" class="tab-pane">
-            @Html.Partial("_LumberSummary", category)
+            @Html.Partial("_LumberCatalog", category)
         </div>
     }
     else if (Model.MiscellaneousCategories.Any(c => c.Id == Model.SelectedCategoryId))
     {
         var category = Model.MiscellaneousCategories.SingleOrDefault(c => c.Id == Model.SelectedCategoryId);
         <div id="@category.Id" class="tab-pane">
-            @Html.Partial("_MiscSummary", category)
+            @Html.Partial("_MiscCatalog", category)
         </div>
     }
     else if (Model.SelectedCategoryId == Guid.Empty)
@@ -47,22 +46,7 @@
         </div>
     }
 }
-<script type="text/javascript">
+@*<script type="text/javascript">
     $(document).ready(function () {
-        $('input[name^="thickness"],[name^="width"]').keydown(function (e) {
-            // Allow: backspace, delete, tab, escape, enter and .
-            if ($.inArray(e.keyCode, [46, 8, 9, 27, 13, 110, 190]) !== -1 ||
-                // Allow: Ctrl+A, Command+A
-                (e.keyCode == 65 && (e.ctrlKey === true || e.metaKey === true)) ||
-                // Allow: home, end, left, right, down, up
-                (e.keyCode >= 35 && e.keyCode <= 40)) {
-                // let it happen, don't do anything
-                return;
-            }
-            // Ensure that it is a number and stop the keypress
-            if ((e.shiftKey || (e.keyCode < 48 || e.keyCode > 57)) && (e.keyCode < 96 || e.keyCode > 105)) {
-                e.preventDefault();
-            }
-        });
     });
-</script>
+</script>*@
