--- a/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Thermory.Domain.Models.LumberCategory
-@{
-    var firstSubCategoryId = Model.LumberSubCategories.First().Id;
-}
+
 <style>
     .lumberCategoryView {
     }
@@ -9,85 +7,100 @@
     .lumberCategoryForm {
     }
 </style>
-<input type="hidden" id="lumberCategoryId" value="@Model.Id" />
 <form>
+    <input type="hidden" id="lumberCategoryId" value="@Model.Id" />
+    <input type="hidden" id="lumberCategorySortOrder" value="@Model.SortOrder" />
     <div>
-        <div class="lumberCategoryView" style="margin-bottom: 10px;">
+        <div class="lumberCategoryView" style="padding: 2px 0 12px 0; margin-bottom: 2px;">
             <h2>
-                @Model.Name <span class="glyphicon glyphicon-edit lumberCategoryView" style="cursor: pointer;" onclick="showLumberCategoryForm();"></span>
+                <span id="lumberCategoryNameView">@Model.Name</span> <span class="glyphicon glyphicon-edit lumberCategoryView" style="cursor: pointer;" onclick="showLumberCategoryForm();"></span>
             </h2>
         </div>
-        <div class="lumberCategoryForm row" style="margin-top: 13px; display: none;">
-            <div class="col-md-8">
+        <div class="lumberCategoryForm row" style="margin-top: 13px;">
+            <div class="col-md-4">
                 <input type="text" id="lumberCategoryName" name="lumberCategoryName" class="form-control"
                        value="@Model.Name" placeholder="Category Name" />
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <input type="button" class="lumberCategoryForm" value="Save" onclick="saveLumberCategory();" />
             </div>
-            <div class="col-md-2">
-                <input type="button" class="lumberCategoryForm" value="Cancel" onclick="showLumberCategoryView();" />
-            </div>
+            @if (Model.Id != Guid.Empty)
+            {
+                <div class="col-md-1">
+                    <input type="button" class="lumberCategoryForm" value="Cancel" onclick=" showLumberCategoryView(); " />
+                </div>
+            }
         </div>
     </div>
-    <div class="dropdown">
-        <button class="dropdown-toggle" type="button" id="subCategoryDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Choose a Sub Category
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="subCategoryDropDown">
-            <li><a href="~/Catalog/Add"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
-            @{
-                foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
-                {
-                    <li><a href="~/Catalog/Index/@subCategory.Id">@subCategory.Name</a></li>
+    <br />
+    @if (Model.Id != Guid.Empty)
+    {
+        var firstSubCategoryId = Model.LumberSubCategories.Any() ? Model.LumberSubCategories.First().Id : Guid.Empty;
+        <div class="dropdown">
+            <button class="dropdown-toggle" type="button" id="subCategoryDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Choose a Sub Category
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="subCategoryDropDown">
+                <li><a href="~/Catalog/Add"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
+                @{
+                    foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
+                    {
+                        <li><a href="~/Catalog/Index/@subCategory.Id">@subCategory.Name</a></li>
+                    }
                 }
+            </ul>
+        </div>
+        <br />
+        <ul class="nav nav-tabs" data-tabs="tabs">
+            @foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
+            {
+                var active = subCategory.Id == firstSubCategoryId ? "class=active" : "";
+                <li @active><a href="#@subCategory.Id" data-toggle="tab">@subCategory.Name</a></li>
             }
         </ul>
-    </div>
-    <ul class="nav nav-tabs" data-tabs="tabs">
-        @foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
-        {
-            var active = subCategory.Id == firstSubCategoryId ? "class=active" : "";
-            <li @active><a href="#@subCategory.Id" data-toggle="tab">@subCategory.Name</a></li>
-        }
-    </ul>
-    <div class="tab-content">
-        @foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
-        {
-            var active = subCategory.Id == firstSubCategoryId ? "active" : "";
-            var widthId = string.Format("width{0}", subCategory.Id);
-            var thicknessId = string.Format("thickness{0}", subCategory.Id);
-            <div id="@subCategory.Id" class="tab-pane @active">
-                <div>
-                    <div class="col-md-3" style="margin-top: 8px;">
-                        <label for="lumberSubCategoryName">Sub Category Name</label>
+        <div class="tab-content">
+            @foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
+            {
+                var active = subCategory.Id == firstSubCategoryId ? "active" : "";
+                var widthId = string.Format("width{0}", subCategory.Id);
+                var thicknessId = string.Format("thickness{0}", subCategory.Id);
+                <div id="@subCategory.Id" class="tab-pane @active">
+                    <div>
+                        <div class="col-md-3" style="margin-top: 8px;">
+                            <label for="lumberSubCategoryName">Sub Category Name</label>
+                        </div>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" name="lumberSubCategoryName" id="lumberSubCategoryName" value="@subCategory.Name" placeholder="Sub Category Name" />
+                        </div>
                     </div>
-                    <div class="col-md-9">
-                        <input type="text" class="form-control" name="lumberSubCategoryName" id="lumberSubCategoryName" value="@subCategory.Name" placeholder="Sub Category Name" />
+                    <div class="form-group" row>
+                        <div class="col-md-3" style="margin-top: 8px;">
+                            <label for="@widthId">Width mm</label>
+                        </div>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" name="@widthId" id="@widthId" value="@subCategory.WidthInMillimeters" maxlength="6" pattern="[0-9]*" placeholder="Width mm" />
+                        </div>
                     </div>
-                </div>
-                <div class="form-group" row>
-                    <div class="col-md-3" style="margin-top: 8px;">
-                        <label for="@widthId">Width mm</label>
-                    </div>
-                    <div class="col-md-9">
-                        <input type="text" class="form-control" name="@widthId" id="@widthId" value="@subCategory.WidthInMillimeters" maxlength="6" pattern="[0-9]*" placeholder="Width mm" />
-                    </div>
-                </div>
-                <div class="form-group" row>
-                    <div class="col-md-3" style="margin-top: 8px;">
-                        <label for="@thicknessId">Thickness mm</label>
-                    </div>
-                    <div class="col-md-9">
-                        <input type="text" class="form-control" name="@thicknessId" id="@thicknessId" value="@subCategory.ThicknessInMillimeters" maxlength="6" pattern="[0-9]*" placeholder="Thickness mm" />
+                    <div class="form-group" row>
+                        <div class="col-md-3" style="margin-top: 8px;">
+                            <label for="@thicknessId">Thickness mm</label>
+                        </div>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" name="@thicknessId" id="@thicknessId" value="@subCategory.ThicknessInMillimeters" maxlength="6" pattern="[0-9]*" placeholder="Thickness mm" />
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
-    </div>
+            }
+        </div>
+    }
 </form>
 <script type="text/javascript">
+    $(document).ready(function () {
+        @{ var command = Model.Id == Guid.Empty ? "showLumberCategoryForm();" : "showLumberCategoryView();";}
+        @command
+    });
+
     function showLumberCategoryForm() {
         $('.lumberCategoryForm').show();
         $('.lumberCategoryView').hide();
@@ -96,18 +109,25 @@
     function saveLumberCategory() {
         var id = $('#lumberCategoryId').val();
         var name = $('#lumberCategoryName').val();
+        var sortOrder = $('#lumberCategorySortOrder').val();
         var category = {
             Id: id,
-            Name: name
+            Name: name,
+            SortOrder: sortOrder
         };
-        console.log(category);
+
         $.ajax({
             type: 'PUT',
             url: '@Url.Action("SaveLumberCategory", "Catalog")',
             data: category,
             dataType: 'text',
             success: function (data) {
-                console.log('saveLumberCategory success');
+                category = JSON.parse(data);
+                if (id == '@Guid.Empty') {
+                    location.href = "Index/" + category.Id;
+                }
+                $('#lumberCategoryNameView').text(category.Name);
+                showLumberCategoryView();
             }
         });
     }
