Updated the edit lumber category link name to match the updated name after saving it.

--- a/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
@@ -127,6 +127,7 @@
                     location.href = "Index/" + category.Id;
                 }
                 $('#lumberCategoryNameView').text(category.Name);
+                $('#lumberCategoryEdit' + category.Id).text(category.Name);
                 showLumberCategoryView();
             }
         });
