--- a/Thermory.Web/Views/Catalog/Index.cshtml
+++ b/Thermory.Web/Views/Catalog/Index.cshtml
@@ -15,7 +15,7 @@
         @{
             foreach (var category in Model.LumberCategories)
             {
-                <li><a href="~/Catalog/Index/@category.Id">@category.Name</a></li>
+                <li><a href="~/Catalog/Index/@category.Id" id="@string.Format("lumberCategoryEdit{0}", category.Id)">@category.Name</a></li>
             }
             <li class="dropdown-header">Miscellaneous</li>
             foreach (var category in Model.MiscellaneousCategories)
