Improved button styling.

--- a/Thermory.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Thermory.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Thermory.Web.Models.LocalPasswordModel
 
 <h3>Change password</h3>
-
-@using (Html.BeginForm("Manage", "Account")) {
+<br/>
+@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new Dictionary<string, object>{{"id", "myForm"}})) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
@@ -22,6 +22,8 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
-        <input type="submit" value="Change password" />
+        <div type="button" class="btn btn-success" onclick="$('#myForm').submit();">
+            <span class="glyphicon glyphicon-check"></span> Change password
+        </div>
     </fieldset>
 }
