--- a/Thermory.Web/Views/Catalog/Index.cshtml
+++ b/Thermory.Web/Views/Catalog/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div class="dropdown">
-    <button class="dropdown-toggle" type="button" id="categoryDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    <div class="dropdown-toggle btn btn-primary" type="button" id="categoryDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         Choose a Category
         <span class="caret"></span>
-    </button>
+    </div>
     <ul class="dropdown-menu" aria-labelledby="categoryDropDown">
         <li class="dropdown-header">Lumber</li>
         <li><a href="~/Catalog/Add"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
