--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -35,7 +35,9 @@
             }
 }
     </div>
-    <button type="button" onclick="saveInventory();">Save</button>
+    <div type="button" class="btn btn-success" onclick="saveInventory();">
+        <span class="glyphicon glyphicon-check"></span> Save
+    </div>
 </div>
 
 <div id="savingPanel" style="display: none;">Saving...</div>
