--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -836,3 +836,30 @@ td.totalSquareFeet {
 td.totalPieceHeading {
     font-weight: bold;
 }
+
+.btn-primary {
+    color: #fff;
+    background-color: #a0522d;
+    border-color: #8b4513;
+}
+
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #d2691e;
+    border-color: #a0522d;
+}
+
+
+.btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
+    color: #fff;
+    background-color: #d2691e;
+    border-color: #a0522d;
+}
+
+
+.btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    color: #fff;
+    background-color: #d2691e;
+    border-color: #a0522d;
+}
