--- a/Thermory.Web/Views/Account/Register.cshtml
+++ b/Thermory.Web/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
     <h2>Create a new account.</h2>
 </hgroup>
 
-@using (Html.BeginForm()) {
+<form id="myForm">
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
@@ -36,9 +36,11 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
-        <input type="submit" value="Register" />
+        <div type="button" class="btn btn-primary" onclick="$('#myForm').submit();">
+            <span class="glyphicon glyphicon-check"></span> Register
+        </div>
     </fieldset>
-}
+</form>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
