--- a/Thermory.Web/Views/PurchaseOrder/Form.cshtml
+++ b/Thermory.Web/Views/PurchaseOrder/Form.cshtml
@@ -20,7 +20,9 @@
     <br />
     @Html.Partial("Order/_PackagingTypeSelector", Model)
     <br />
-    <button type="button" onclick=" saveOrder();">Save</button>
+    <div type="button" class="btn btn-success" onclick="saveOrder();">
+        <span class="glyphicon glyphicon-check"></span> Save
+    </div>
     <br />
     <br />
     <ul class="nav nav-tabs" data-tabs="tabs">
@@ -56,7 +58,9 @@
             }
         }
     </div>
-    <button type="button" onclick=" saveOrder();">Save</button>
+    <div type="button" class="btn btn-success" onclick="saveOrder();">
+        <span class="glyphicon glyphicon-check"></span> Save
+    </div>
 </div>
 
 <div id="savingPanel" style="display: none;">Saving...</div>
