--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -25,8 +25,12 @@
     <div class="row" style="margin-top: 5px">
         <div class="col-sm-4"></div>
         <div class="col-sm-8">
-            <div class="btn btn-default" onclick="saveUser();">Save</div>&nbsp;
-            <div class="btn btn-default" onclick="$('#userDetails').hide();">Cancel</div>
+            <div type="button" class="btn btn-success" onclick="saveUser();">
+                <span class="glyphicon glyphicon-check"></span> Save
+            </div>
+            <div type="button" class="btn btn-danger" onclick="$('#userDetails').hide();">
+                <span class="glyphicon glyphicon-remove"></span> Cancel
+            </div>
         </div>
     </div>
 </div>
