Changed check icon to ok icon.

--- a/Thermory.Web/Views/Account/Login.cshtml
+++ b/Thermory.Web/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                 </li>
             </ol>
             <div type="button" class="btn btn-primary" onclick="$('form').submit();">
-                <span class="glyphicon glyphicon-check"></span> Log in
+                <span class="glyphicon glyphicon-ok"></span> Log in
             </div>
         </fieldset>
         <p>
