--- a/Thermory.Web/Views/Account/Register.cshtml
+++ b/Thermory.Web/Views/Account/Register.cshtml
@@ -37,7 +37,7 @@
             </li>
         </ol>
         <div type="button" class="btn btn-primary" onclick="$('#myForm').submit();">
-            <span class="glyphicon glyphicon-check"></span> Register
+            <span class="glyphicon glyphicon-ok"></span> Register
         </div>
     </fieldset>
 </form>
