--- a/Thermory.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Thermory.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -23,7 +23,7 @@
             </li>
         </ol>
         <div type="button" class="btn btn-success" onclick="$('#myForm').submit();">
-            <span class="glyphicon glyphicon-check"></span> Change password
+            <span class="glyphicon glyphicon-ok"></span> Change password
         </div>
     </fieldset>
 }
