--- a/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
@@ -38,7 +38,7 @@
                     </td>
                     <td>
                         <div type="button" class="lumberCategoryForm btn btn-success" onclick="saveLumberCategory();">
-                            <span class="glyphicon glyphicon-check"></span> Save
+                            <span class="glyphicon glyphicon-ok"></span> Save
                         </div>
                     </td>
                     <td>
