--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -36,7 +36,7 @@
 }
     </div>
     <div type="button" class="btn btn-success" onclick="saveInventory();">
-        <span class="glyphicon glyphicon-check"></span> Save
+        <span class="glyphicon glyphicon-ok"></span> Save
     </div>
 </div>
 
