--- a/Thermory.Web/Views/PurchaseOrder/Form.cshtml
+++ b/Thermory.Web/Views/PurchaseOrder/Form.cshtml
@@ -19,7 +19,7 @@
     @Html.Partial("Order/_CustomerSelector", Model)
     <br />
     <div type="button" class="btn btn-success" onclick="saveOrder();">
-        <span class="glyphicon glyphicon-check"></span> Save
+        <span class="glyphicon glyphicon-ok"></span> Save
     </div>
     <br />
     <br />
@@ -57,7 +57,7 @@
         }
     </div>
     <div type="button" class="btn btn-success" onclick="saveOrder();">
-        <span class="glyphicon glyphicon-check"></span> Save
+        <span class="glyphicon glyphicon-ok"></span> Save
     </div>
 </div>
 
