--- a/Thermory.Web/Views/SalesOrder/Form.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Form.cshtml
@@ -21,7 +21,7 @@
     @Html.Partial("Order/_PackagingTypeSelector", Model)
     <br />
     <div type="button" class="btn btn-success" onclick="saveOrder();">
-        <span class="glyphicon glyphicon-check"></span> Save
+        <span class="glyphicon glyphicon-ok"></span> Save
     </div>
     <br />
     <br />
@@ -59,7 +59,7 @@
         }
     </div>
     <div type="button" class="btn btn-success" onclick="saveOrder();">
-        <span class="glyphicon glyphicon-check"></span> Save
+        <span class="glyphicon glyphicon-ok"></span> Save
     </div>
 </div>
 
