--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -26,7 +26,7 @@
         <div class="col-sm-4"></div>
         <div class="col-sm-8">
             <div type="button" class="btn btn-success" onclick="saveUser();">
-                <span class="glyphicon glyphicon-check"></span> Save
+                <span class="glyphicon glyphicon-ok"></span> Save
             </div>
             <div type="button" class="btn btn-danger" onclick="$('#userDetails').hide();">
                 <span class="glyphicon glyphicon-remove"></span> Cancel
